Set language level to Java 8